examples/invalid/07_payloadless_variant_call.lane
module Examples.Invalid07
// invalid: payloadless variants are values, not zero-argument calls
pub enum Option[A] {
  none
  some(A)
}

pub let value : Option[Int] = Option::none()
